section head updates

--- a/commons_project/commons_core/templates/index.html
+++ b/commons_project/commons_core/templates/index.html
@@ -21,13 +21,13 @@
                 <div class="yui3-u-1-2">
                     <div class="yui3-g">
                         <div class="yui3-u-1">
-                        <h2 class="section-head">Spotlight</h2>
+                        <h2 class="spotlight_head">Spotlight</h2>
                         </div>
                     </div>
                 </div><!-- left col heading -->
                 <div class="yui3-u-1-2">
                     <div class="yui3-u-1">
-                        <h2 class="section-head">Civic BoyHowdy!</h2>
+                        <h2 class="welcome_head">Civic BoyHowdy!</h2>
                     </div> 
                 </div><!-- right col heading -->
             </div> <!-- end grid for twop two column headings  -->
@@ -42,9 +42,9 @@
                 </div>
             </div><!-- left col content -->
               <div class="yui3-u-1-2">
-                 <div class="right-col yui3-g">
+                 <div class="right-col yui3-g" id="welcome_text">
                    <div class="yui3-u-1">
-                    <p id="welcome_text">The app catalog is the watering hole where those in the know share what's new with civic technology and the cities that rely on it. Go ahead and browse by <a href="">category</a>, or take a look at the <a href="">cities</a> to see a bird's eye view of who's using what, and what they're saying about it.</p>
+                    <p>The app catalog is the watering hole where those in the know share what's new with civic technology and the cities that rely on it. Go ahead and browse by <a href="">category</a>, or take a look at the <a href="">cities</a> to see a bird's eye view of who's using what, and what they're saying about it.</p>
                 </div>   
             </div>
         </div><!-- right col content -->
@@ -114,9 +114,9 @@
                 <div class="yui3-u-1-2">
                     <div class="right-col yui3-g">
                         <div class="yui3-u-1">
-                            <ul class="recent-activity">
-                                <li>not much happening, apparently!</li>
-                                <li></li>
+                            <ul class="recent_activity">
+                                
+                                <li><h3>not much happening, apparently!</h3></li>
                             </ul>
                         </div>   
                    </div>
