--- a/commons_project/commons_core/templates/j_index.html
+++ b/commons_project/commons_core/templates/j_index.html
@@ -1,9 +1,56 @@
 {% extends "base.html" %}
 
-{% block title %}All Jurisdictions{% endblock %}
+{% block title %}Cities, Counties, States and Agencies{% endblock %}
 
 {% block content %}
-        <h1>Jurisdictions</h1>
+    <div class="yui3-g"><!-- grid for main content area -->
+            <div class="yui3-u-1">
+                <div id="top-alert">
+                    <h2>
+                    <a href="/">log-in</a> to get access to great case studies, vendors, experts and more!
+                    </h2>
+                </div>
+            </div>
+        
+            <div class="yui3-u-1">
+                 <h1>Cities, Counties, States and Agencies</h1>
+            </div> <!-- end main title -->
+    
+    
+    
+    
+    
+    
+    
+    
+    </div> <!-- end main content area -->
+    
+    <script type="text/javascript">
+    	$(function() {
+    	    
+    	    
+    	    
+    	    {% if latest_app_list %}
+    	         {% for app in latest_app_list %}
+    	            $('#star-rating-{{ app.id }}').raty({
+                        path: "{{STATIC_URL}}/img/",
+                        start: Math.floor(Math.random()*3) + 2
+                        });
+                 {% endfor %}
+             {% endif %}
+             
+              {% if user.is_authenticated %}
+    	         $('#top-alert').hide();
+    	     {% else %}
+        	     $('#top-alert').show('fast');
+    	     {% endif %}
+             
+             
+    	});
+    </script>
+            
+
+       
 {% if jurisdiction_list %}
 <ul>
     {% for j in jurisdiction_list %}
