--- a/commons_project/commons_core/templates/categoryindex.html
+++ b/commons_project/commons_core/templates/categoryindex.html
@@ -13,53 +13,12 @@
             </div>
         
             <div class="yui3-u-1">
-                <h1>Welcome</h1>
+                <h1>Browse the Apps by Category</h1>
             </div> <!-- end main title -->
-
-
-            <div class="yui3-g"><!-- grid for two top columns headings -->
-                <div class="yui3-u-1-2">
-                    <div class="yui3-g">
-                        <div class="yui3-u-1">
-                        <h2 class="spotlight_head">Spotlight</h2>
-                        </div>
-                    </div>
-                </div><!-- left col heading -->
-                <div class="yui3-u-1-2">
-                    <div class="yui3-u-1">
-                        <h2 class="welcome_head">Civic BoyHowdy!</h2>
-                    </div> 
-                </div><!-- right col heading -->
-            </div> <!-- end grid for twop two column headings  -->
-            <div class="yui3-g"><!-- grid for two top columns content -->
-              <div class="yui3-u-1-2">
-                <div class="left-col yui3-g">
-                    <div class="yui3-u-1">  
-
-                      <div class="media-gallery-1col"></div>
-                      <p>this is explaining the app</p>
-                    </div>
-                </div>
-            </div><!-- left col content -->
-              <div class="yui3-u-1-2">
-                 <div class="right-col yui3-g" id="welcome_text">
-                   <div class="yui3-u-1">
-                    <p>The app catalog is the watering hole where those in the know share what's new with civic technology and the cities that rely on it. Go ahead and browse by <a href="">category</a>, or take a look at the <a href="">cities</a> to see a bird's eye view of who's using what, and what they're saying about it.</p>
-                </div>   
-            </div>
-        </div><!-- right col content -->
-            </div> <!-- end grid for top two column contents -->
-            
-            
-            <div class="yui3-g"> <!-- grid for category head , may be uneeded -->
-                <div class="yui3-u-1-3">
-                     <h2 class="section-head">Browse by Category</h2>
-                </div>
-            </div> <!-- category browser head -->
             
             <div class="yui3-g">
             <div class="yui3-u-1 centered">
-            <ul class="yui3-g category-strip">
+             <ul class="yui3-g category-strip">
              
                 <li class="yui3-u-1-6"><div class="cat-strip-item"><a href="/apps/"><img src="" />Health</a></div></li>
                 <li class="yui3-u-1-6"><div class="cat-strip-item"><a href="/apps/"><img src="" />Transit</a></div></li>
@@ -72,8 +31,23 @@
             </div>
             </div><!-- grid for category browser -->
             
+            <div class="yui3-g">
+                <div class="yui3-u-1 centered">
+                    <ul><h3>what</h3>
+                        <li>hi<li>
+                        <li>hi3<li>                    
+                    </ul>
+                    <ul><h3>dag</h3>
+                        <li><a href="category/1/">dagplus</a><li>
+                        <li>h2<li>                        
+                    </ul>
+                
+                </div>
             
-             </div> <!-- end main content area -->
+            </div><!-- grid for sub categories -->
+            
+            
+     </div> <!-- end main content area -->
     
     <script type="text/javascript">
     	$(function() {
