--- a/commons_project/commons_core/templates/detail.html
+++ b/commons_project/commons_core/templates/detail.html
@@ -18,21 +18,20 @@
            <div class="yui3-u-1">
                 <h3>{{app.description}}</h3>
             </div> <!-- end description -->
-
             <div class="yui3-g"><!-- grid for two top columns content -->
               <div class="yui3-u-1-2">
                 <div class="left-col yui3-g">
                     <div class="yui3-u-1">
-                    {% load thumbnail %}
-                      <div class="media-gallery-1col"><img src="{% thumbnail app.screenshots.first 250x250 %}"/></div>
+                        {% load thumbnail %}
+                        {% for img in app.screenshots.all|slice:":1" %}
+                        <div class="media-gallery-1col"><img src="{% thumbnail img.image 250x250 %}"/></div>
+                        {% endfor %}
                       <!-- problem with this listing code below -->
-                      {% comment %} 
                       <ul class="screenshot-strip">
                         {% for img in app.screenshots.all %}
-                         <li><img src="{% thumbnail img.image 250x250 %}"/></li>
+                         <li><img src="{% thumbnail img.image 50x50 %}"/></li>
                         {% endfor %}
                       </ul>
-                       {% endcomment %}
                     <!-- end of problem code -->
                     </div>
                 </div>
