--- a/commons_project/templates/userena/profile_list.html
+++ b/commons_project/templates/userena/profile_list.html
@@ -10,7 +10,7 @@
   {% for profile in profile_list %}
   <li>
   <a href="{% url userena_profile_detail profile.user.username %}"><img src="{{ profile.get_mugshot_url }}" /></a>
-  <a href="{% url userena_profile_detail profile.user.username %}">hi {{ profile.user.username }}</a>
+  <a href="{% url userena_profile_detail profile.user.username %}">{{ profile.user.username }}</a>
   </li>
   {% endfor %}
 
