--- a/commons_project/templates/base.html
+++ b/commons_project/templates/base.html
@@ -12,11 +12,14 @@
          <link rel="stylesheet" type="text/css" href="http://yui.yahooapis.com/3.3.0/build/cssbase/base-context-min.css">
         <link rel="stylesheet" type="text/css" href="http://yui.yahooapis.com/3.3.0/build/cssgrids/grids-min.css">
         <link rel="stylesheet" href="{{ STATIC_URL }}css/style.css" type="text/css" />
+        <link rel="stylesheet" href="{{ STATIC_URL }}css/nivo-slider.css" type="text/css" media="screen" />
+
         
-    
+
+
 		<script type="text/javascript" src="{{ STATIC_URL }}js/jquery.js"></script>
 		<script type="text/javascript" src="{{ STATIC_URL }}js/jquery.raty.min.js"></script>    
-    
+       <script type="text/javascript" src="{{ STATIC_URL }}js/jquery.nivo.slider.pack.js"></script>    
         <!-- IMPORTANT Remember to update the files, run : -->
         <!--  ./manage.py collectstatic  -->
       
