--- a/commons_project/commons_core/templates/j_index.html
+++ b/commons_project/commons_core/templates/j_index.html
@@ -15,9 +15,40 @@
             <div class="yui3-u-1">
                  <h1>Cities, Counties, States and Agencies</h1>
             </div> <!-- end main title -->
-    
-    
-    
+            <div class="yui3-u-1 centered">
+                filter by state: <select name="menu">
+                        <option value="0" selected>(please select:)</option>
+                        <option value="1">AL</option>
+                        <option value="2">AK</option>
+                        <option value="3">GA</option>
+                        <option value="other">DE</option>
+                </select>
+                or start typing a city
+                <input type="text" value="e.g. West Virginia, Transit, etc/>
+                <input type="submit" value="search"/>
+            
+            </div>
+            <div class="yui3-u-2-3">
+                <div class="centered"><img src="{{ STATIC_URL }}/img/map_big.png"/></div>
+            
+            </div>
+            <div class="yui3-u-1-3">
+                <div class="yui3-u-1-2">
+                    {% if jurisdiction_list %}
+                    <ul>
+                        {% for j in jurisdiction_list %}
+                        <li><a href="/j/{{ j.id }}">{{ j.name }}</a></li>
+                        {% endfor %}
+                    </ul>
+                    {% else %}
+                    <p>No Jurisdictions Yet</p>
+                    {% endif %}
+                </div>
+            </div>
+            <div class="yui3-g">
+                
+            
+            </div>
     
     
     
