--- a/commons_project/commons_core/templates/index.html
+++ b/commons_project/commons_core/templates/index.html
@@ -45,7 +45,7 @@
               <div class="yui3-u-1-2 two_col">
                  <div class="right-col yui3-g" id="welcome_text">
                    <div class="yui3-u-1">
-                     <h2 class="section_head">Civic BoyHowdy!</h2>
+                     <h2 class="section_head">Civic Apps, Ahoy!</h2>
                     <p>The app catalog is the watering hole where those in the know share what's new with civic technology and the cities that rely on it. Go ahead and browse by <a href="">category</a>, or take a look at the <a href="">cities</a> to see a bird's eye view of who's using what, and what they're saying about it.</p>
                 </div>   
             </div>
