--- a/commons_project/static/css/nivo-slider.css
+++ b/commons_project/static/css/nivo-slider.css
@@ -18,6 +18,8 @@
 	position:absolute;
 	top:0px;
 	left:0px;
+	width=400; 
+	height=300;	
 }
 /* If an image is wrapped in a link */
 .nivoSlider a.nivo-imageLink {
