--- a/commons_project/commons_core/templates/index.html
+++ b/commons_project/commons_core/templates/index.html
@@ -55,7 +55,7 @@
             
             <div class="yui3-g"> <!-- grid for category head , may be uneeded -->
                 <div class="yui3-u-1-3">
-                     <h2 class="section-head">Browse by Category</h2>
+                     <h2 class="section-head">Browse Apps by Category</h2>
                 </div>
             </div> <!-- category browser head -->
             
@@ -64,11 +64,11 @@
             <ul class="yui3-g category-strip">
              
                 <li class="yui3-u-1-6"><div class="cat-strip-item"><a href="/apps/"><img src="{{ STATIC_URL }}/img/health.png" />Health</a></div></li>
-                <li class="yui3-u-1-6"><div class="cat-strip-item"><a href="/apps/"><img src="" />Transit</a></div></li>
-                <li class="yui3-u-1-6"><div class="cat-strip-item"><a href="/apps/"><img src="" />Governance</a></div></li>
-                <li class="yui3-u-1-6"><div class="cat-strip-item"><a href="/apps/"><img src="" />Geographic</a></div></li>
-                <li class="yui3-u-1-6"><div class="cat-strip-item"><a href="/apps/"><img src="" />Police</a></div></li>
-                <li class="yui3-u-1-6"><div class="cat-strip-item"><a href="/apps/"><img src="" />Fire</a></div></li>
+                <li class="yui3-u-1-6"><div class="cat-strip-item"><a href="/apps/"><img src="{{ STATIC_URL }}/img/transit.png" />Transit</a></div></li>
+                <li class="yui3-u-1-6"><div class="cat-strip-item"><a href="/apps/"><img src="{{ STATIC_URL }}/img/governance.png" />Governance</a></div></li>
+                <li class="yui3-u-1-6"><div class="cat-strip-item"><a href="/apps/"><img src="{{ STATIC_URL }}/img/map.png" />Geographic</a></div></li>
+                <li class="yui3-u-1-6"><div class="cat-strip-item"><a href="/apps/"><img src="{{ STATIC_URL }}/img/police.png" />Police</a></div></li>
+                <li class="yui3-u-1-6"><div class="cat-strip-item"><a href="/apps/"><img src="{{ STATIC_URL }}/img/fire_dept.png" />Fire</a></div></li>
             
             </ul> 
             </div>
