--- a/commons_project/templates/base.html
+++ b/commons_project/templates/base.html
@@ -35,7 +35,7 @@
             <div id="breadcrumbs"><a href="#">home</a> > </div>
         </div>
         <div class="yui3-u-1-8">
-            <div class="right"><a href="#">share this!</a></div>
+            <div id="share"><a href="#">share this!</a></div>
         </div>
         </div>
         <div class="yui3-g">
@@ -46,8 +46,31 @@
         </section>
         </div>
         <div class="yui3-g footer">
-            <div class="yui3-u-1">
-                footer text
+            <div class="yui3-u-1-12"></div>
+            <div class="yui3-u-1-3">
+                <p>The Commons Project is a product of:</p>
+            </div>
+                <div class="yui3-u-1-6"></div>
+            <div class="yui3-u-1-3">
+                <p>A collaboration led by:</p>
+            </div>
+            <div class="yui3-u-1-12"></div>
+                <div class="yui3-g">
+                    <div class="yui3-u-1-12"></div>
+                    <div class="yui3-u-1-3"><img src="{{STATIC_URL}}/img/civiccommons.png"/></div>                    
+                    <div class="yui3-u-1-6"></div>
+                    <div class="yui3-u-1-3 collab">
+                     <div class="yui3-g">
+                      <div class="yui3-u-1-2">
+                          <img src="{{STATIC_URL}}/img/codeforamerica.png"/>
+                     </div>
+                      <div class="yui3-u-1-2">
+                            <img src="{{STATIC_URL}}/img/openplans.png"/>
+                     </div>
+                     </div>
+                    </div>
+                    <div class="yui3-u-1-12"></div>
+                </div>
             </div>
         
         </div>
