--- a/commons_project/commons_core/templates/j_detail.html
+++ b/commons_project/commons_core/templates/j_detail.html
@@ -89,12 +89,12 @@
             <div class="yui3-u-1 centered">
             <ul class="yui3-g category-strip">
              
-                <li class="yui3-u-1-6"><div class="cat-strip-item"><a href="/apps/"><img src="" />Health</a></div></li>
-                <li class="yui3-u-1-6"><div class="cat-strip-item"><a href="/apps/"><img src="" />Transit</a></div></li>
-                <li class="yui3-u-1-6"><div class="cat-strip-item"><a href="/apps/"><img src="" />Governance</a></div></li>
-                <li class="yui3-u-1-6"><div class="cat-strip-item"><a href="/apps/"><img src="" />Geographic</a></div></li>
-                <li class="yui3-u-1-6"><div class="cat-strip-item"><a href="/apps/"><img src="" />Police</a></div></li>
-                <li class="yui3-u-1-6"><div class="cat-strip-item"><a href="/apps/"><img src="" />Fire</a></div></li>
+                <li class="yui3-u-1-6"><div class="cat-strip-item"><a href="/apps/"><img src="{{ STATIC_URL }}/img/health.png" />Health</a></div></li>
+                <li class="yui3-u-1-6"><div class="cat-strip-item"><a href="/apps/"><img src="{{ STATIC_URL }}/img/transit.png" />Transit</a></div></li>
+                <li class="yui3-u-1-6"><div class="cat-strip-item"><a href="/apps/"><img src="{{ STATIC_URL }}/img/governance.png" />Governance</a></div></li>
+                <li class="yui3-u-1-6"><div class="cat-strip-item"><a href="/apps/"><img src="{{ STATIC_URL }}/img/map.png" />Geographic</a></div></li>
+                <li class="yui3-u-1-6"><div class="cat-strip-item"><a href="/apps/"><img src="{{ STATIC_URL }}/img/police.png" />Police</a></div></li>
+                <li class="yui3-u-1-6"><div class="cat-strip-item"><a href="/apps/"><img src="{{ STATIC_URL }}/img/fire_dept.png" />Fire</a></div></li>
             
             </ul> 
             </div>
