update the user profile list to style the list of users

--- a/commons_project/commons_core/templates/categoryindex.html
+++ b/commons_project/commons_core/templates/categoryindex.html
@@ -20,31 +20,17 @@
             <div class="yui3-u-1 centered">
               <ul class="yui3-g category-strip">
              
-                <li class="yui3-u-1-6"><div class="cat-strip-item"><a href="/apps/"><img src="{{ STATIC_URL }}/img/health.png" />Health</a></div></li>
-                <li class="yui3-u-1-6"><div class="cat-strip-item"><a href="/apps/"><img src="{{ STATIC_URL }}/img/transit.png" />Transit</a></div></li>
-                <li class="yui3-u-1-6"><div class="cat-strip-item"><a href="/apps/"><img src="{{ STATIC_URL }}/img/governance.png" />Governance</a></div></li>
-                <li class="yui3-u-1-6"><div class="cat-strip-item"><a href="/apps/"><img src="{{ STATIC_URL }}/img/map.png" />Geographic</a></div></li>
-                <li class="yui3-u-1-6"><div class="cat-strip-item"><a href="/apps/"><img src="{{ STATIC_URL }}/img/police.png" />Police</a></div></li>
-                <li class="yui3-u-1-6"><div class="cat-strip-item"><a href="/apps/"><img src="{{ STATIC_URL }}/img/fire_dept.png" />Fire</a></div></li>
+                <li class="yui3-u-1-6"><div class="cat-strip-item selected_cat"><a href="/apps/category/1/"><img src="{{ STATIC_URL }}/img/health.png" />Health</a></div></li>
+                <li class="yui3-u-1-6"><div class="cat-strip-item"><a href="/apps/category/1/"><img src="{{ STATIC_URL }}/img/transit.png" />Transit</a></div></li>
+                <li class="yui3-u-1-6"><div class="cat-strip-item"><a href="/apps/category/1/"><img src="{{ STATIC_URL }}/img/governance.png" />Governance</a></div></li>
+                <li class="yui3-u-1-6"><div class="cat-strip-item"><a href="/apps/category/1/"><img src="{{ STATIC_URL }}/img/map.png" />Geographic</a></div></li>
+                <li class="yui3-u-1-6"><div class="cat-strip-item"><a href="/apps/category/1/"><img src="{{ STATIC_URL }}/img/police.png" />Police</a></div></li>
+                <li class="yui3-u-1-6"><div class="cat-strip-item"><a href="/apps/category/1/"><img src="{{ STATIC_URL }}/img/fire_dept.png" />Fire</a></div></li>
             
             </ul> 
             </div>
             </div><!-- grid for category browser -->
             
-            <div class="yui3-g">
-                <div class="yui3-u-1 centered">
-                    <ul><h3>what</h3>
-                        <li>hi<li>
-                        <li>hi3<li>                    
-                    </ul>
-                    <ul><h3>dag</h3>
-                        <li><a href="category/1/">dagplus</a><li>
-                        <li>h2<li>                        
-                    </ul>
-                
-                </div>
-            
-            </div><!-- grid for sub categories -->
             
             
      </div> <!-- end main content area -->
