trying a different font-weight for unix compatibility

--- a/commons_project/static/css/style.css
+++ b/commons_project/static/css/style.css
@@ -50,7 +50,7 @@ h2 {
     margin: .4em .3em .3em .8em;
     font-size: 140%;
     display: inline-block;
-    font-weight:600;
+    font-weight:bolder;
 
 }
 
