adding empty subcat section to cat index

--- a/commons_project/commons_core/templates/categoryindex.html
+++ b/commons_project/commons_core/templates/categoryindex.html
@@ -30,7 +30,13 @@
             </ul> 
             </div>
             </div><!-- grid for category browser -->
+            <div class="yui3-g">
+                <div class="yui3-u-1 centered subcats">
+                    <h2>Subcategories for Health</h2>
+                    <p>no subcategories exist for this category</p>
+                </div>
             
+            </div>
             
             
      </div> <!-- end main content area -->
