--- a/commons_project/templates/userena/profile_list.html
+++ b/commons_project/templates/userena/profile_list.html
@@ -6,7 +6,7 @@
 {% block content %}
 
 <div class="yui3-g"><!-- grid for main content area -->
-            <div class="yui3-u-1-2">
+            <div class="yui3-u-1">
                     {% for profile in profile_list %}
                     <div class="title_image">
                     <a href="{% url userena_profile_detail profile.user.username %}">
